Created script to build HTML code and aggreate language data.

--- a/notebooks/data_checks.ipynb
+++ b/notebooks/data_checks.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(\"/Users/k01101011/Documents/GitHub/kookiekutter/data/output/docs.csv\")\n",
+    "data = pd.read_csv(\"../data/output/docs.csv\")\n",
     "data = data[data.file != \"src/__init__.py\"]\n",
     "data"
    ]
@@ -33,11 +33,50 @@
     "for i, j in data.iterrows():\n",
     "    print(f\"\\n{i}: {j[0]}\\n {j[1]}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = \"This Python script defines two models for a Home App: Post and Friend. The Post model has fields for a post, the user who posted it, and the time it was created and updated. The Friend model is a many-to-many model used for adding and removing other users on the site. It also has two class methods, make_friend and lose_friend, which allow users to add and remove friends from their list.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "import openai\n",
+    "\n",
+    "openai.api_key = \"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\"\n",
+    "\n",
+    "response = openai.Completion.create(\n",
+    "    model=\"text-davinci-003\",\n",
+    "    prompt=t,\n",
+    "    temperature=0,\n",
+    "    max_tokens=64,\n",
+    "    top_p=1.0,\n",
+    "    frequency_penalty=0.0,\n",
+    "    presence_penalty=0.0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "kkenv",
    "language": "python",
    "name": "python3"
   },
@@ -51,11 +90,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
-    "hash": "c6e4e9f98eb68ad3b7c296f83d20e6de614cb42e90992a65aa266555a3137d0d"
+    "hash": "acc04781e4b843f70226f6d061b5bf7a3dec390f9dc5d1f428dbc57680fa655c"
    }
   }
  },
